--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ PORT=5000
 DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD
-DB_NAME=test
+DB_NAME=ecommerceplatform
 JWT_SECRET=eccomerce-platform?2024Teslonix
 CLOUDINARY_CLOUD_NAME=dcjyit2hi
 CLOUDINARY_API_KEY=887288952843736
