--- a/.env
+++ b/.env
@@ -4,3 +4,8 @@ DB_USER=root
 DB_PASSWORD
 DB_NAME=ecommerceplatform
 JWT_SECRET=eccomerce-platform?2024Teslonix
+PAYPAL_CLIENT_ID=paypalclientid
+PAYPAL_SECRET
+CLOUDINARY_CLOUD_NAME
+CLOUDINARY_API_KEY
+CLOUDINARY_API_SECRET
